--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(18, 18, 31);
+  -moz-osx-font-smoothing: grayscale; */
+  font-family: 'Roboto', sans-serif;
+  /* background-color: rgb(18, 18, 31); */
+  background: rgb(18,18,31);
   color: whitesmoke;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
 }
 
 .App {
@@ -31,8 +34,11 @@ a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  max-width: 100%;
+  width: 80%;
+  max-width: 1440px;
   flex-wrap: wrap;
+  margin: 0 auto;
+  font-weight: 500;
 }
 
 .ul-links {
@@ -72,7 +78,23 @@ a {
   margin: 5px;
   background-color: rgb(255, 255, 110);
 }
-
+.home-btn {
+  color: whitesmoke;
+  text-decoration: none;
+}
+.login-btn {
+  text-decoration: none;
+}
+.signup-btn {
+  text-decoration: none;
+  color: rgb(18,18,31);
+  background-color: rgb(255, 255, 110);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-radius: 6px;
+}
 /* NAVBAR */
 /*
 /
@@ -82,8 +104,6 @@ a {
 .login-container {
   margin: 0 auto;
 }
-
-
 /* LOGIN */
 /*
 /
@@ -93,15 +113,61 @@ a {
 .register-container {
   margin: 0 auto;
 }
-
-
 /* REGISTER */
+/*
+/
+/
+*/
+/* LANDING */
+.landing-container {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/* .diagonal-box {
+  background-image: linear-gradient(45deg, #6303B1, #ff0099);
+  transform: skewY(-9deg);
+
+}
+.content {
+  max-width: 50em;
+  margin: 0 auto; 
+  transform: skewY(9deg);
+} */
+.landing-title {
+  background: -webkit-linear-gradient(180deg, rgb(255, 244, 83), rgb(245, 255, 108));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3rem;
+  font-weight: 700;
+  /* text-transform: uppercase; */
+  letter-spacing: 2px;
+  padding-bottom: 1rem;
+}
+.subheader {
+  /* background: -webkit-linear-gradient(180deg, rgb(255, 244, 83), rgb(245, 255, 108));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+  font-size: 2rem;
+  font-weight: 500;
+}
+.subtle-text {
+  font-size: inherit;
+  color: rgb(37, 37, 37);
+}
+/* LANDING */
 /*
 /
 /
 */
 /*MEDIA QUERIES*/
 @media screen and (max-width: 768px) {
+
+  .nav-container {
+    max-width: 90%;
+  }
 
   .ul-links.active-false {
     display: none;
