--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,17 @@ a {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.form-control {
+  margin-left: 10px;
+  font-size: 1rem;
+  padding: 8px 10px;
+  border: 1px solid whitesmoke;
+  border-radius: 6px;
+  background-color: whitesmoke;
+}
+input:focus {
+  outline: none;
+}
 .continue-btn-wrapper {
   display: flex;
   align-items: center;
@@ -156,7 +167,6 @@ a {
   color: rgb(18,18,31);
 }
 .continue-btn {
-
   background-color: rgb(255, 255, 110);
   padding-left: 2rem;
   padding-right: 2rem;
@@ -280,6 +290,26 @@ a {
   .burger {
     display: block;
     cursor: pointer;
+  }
+  .form-label {
+    width: 100%;
+  }
+
+  .form-group {
+    margin-left: 0;
+    padding: 0;
+  }
+
+  .login-form {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    background: rgb(28,28,41);
+    width: 90%;
+    padding: 0px;
   }
 
 }
