--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,45 @@ input:focus {
 .text-date {
   font-size: 0.8rem;
 }
+.link-icon {
+  height: 1rem;
+  width: 1rem;
+}
+
+.text-link {
+  padding-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
 /* USER PAGE */
+/*
+/
+/
+*/
+/* PROFLE PAGE */
+.profile-container {
+  width: 40%;
+  max-width: 800px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: whitesmoke;
+  color: rgb(24, 24, 24);
+  border-radius: 6px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.profile-item {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+/* PROFILE PAGE */
 /*
 /
 /
