--- a/src/index.css
+++ b/src/index.css
@@ -404,6 +404,45 @@ input:focus {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+.btn-wrapper {
+  margin: 0 auto;
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 300px;
+}
+.update-btn {
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: whitesmoke;
+  background-color: rgb(18,18,31);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-radius: 6px;
+  margin-right: 1rem;
+}
+.del-btn {
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: rgb(253, 253, 253);
+  background-color: rgb(190, 22, 22);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-radius: 6px;
+  margin-left: 1rem;
+}
 /* PROFILE PAGE */
 /*
 /
@@ -600,6 +639,13 @@ textarea:focus {
   .nt-form-control {
     width: 100%;
   }
-
+  /*PROFILE*/
+  .btn-wrapper {
+    width: 80%;
+  }
+  /*PROFILE*/
 }
+
+
+
 /*MEDIA QUERIES*/
